# PP1_2020_FALL

./: .gitignore  README.md
w1/g1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  a.out
w1/g2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  15_2.cpp  15_3.cpp  16.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  a.out
w10/: 2.cpp  CMakeLists.txt
w10/G1/: main.cpp
w10/G2/lecture/: 2.cpp  CMakeLists.txt  input.txt  main.cpp
w11/: 2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  9.cpp  CMakeLists.txt  a.out
w11/g1/: 1.cpp  10.cpp  3.cpp  4.cpp  6_2.cpp  8.cpp  CMakeLists.txt
w11/g2/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  7_2.cpp  8.cpp  8_2.cpp  9.cpp  CMakeLists.txt
w13/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
w13/g1/: 11.cpp  12.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
w13/g2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
w14/: 11.cpp  12.cpp  4.cpp  6.cpp  7.cpp  8.cpp  input.txt
w14/g1/: 1.cpp  10.cpp  13.cpp  14.cpp  15.cpp  16.cpp  2.cpp  3.cpp  5.cpp  9.cpp  CMakeLists.txt
w14/g2/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  lab_9_l.cpp
w2/g1/: a.out
w2/g1/lab1_a/: lab1_a.cpp  lab1_a_2.cpp
w5/: 4.cpp  6.cpp  7.cpp  a.out  gen1.cpp
w5/g1/: 1.cpp  2.cpp  3.cpp  5.cpp  8.cpp
w5/g2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  a.out  input.txt
w5/informatics/: 354.cpp  357.cpp  a.out  input.txt
w6/g1/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  14_3.cpp  14_4.cpp  15.cpp  16.cpp  17.cpp  18.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  23_2.cpp  24.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a.out  input.txt  ss.txt
w6/g2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  14_2.cpp  14_3.cpp  14_4.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  21_2.cpp  22.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a.out  input.txt  lab5_a.cpp  lab5_a_2.cpp  lab5_b.cpp  lab5_b_2.cpp
w7/: 2.cpp  5.cpp
w7/g1/: 1.cpp  3.cpp  4.cpp  6.cpp  7.cpp  a.out
w7/g2/: 1.cpp  10.cpp  10_2.cpp  10_3.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a.out
w7/informatics/: 306.cpp  a.out
w9/: 2.cpp  a.out
w9/G1/: 1.cpp
w9/G2/: 1.cpp  2.cpp  2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  a.out
(+156 files in other folders)
