cmake_minimum_required(VERSION 3.17)
project(w11)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1.cpp 6_2.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(example6 6.cpp)
add_executable(example6_2 6_2.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)