cmake_minimum_required(VERSION 3.17)
project(g2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex1 1.cpp)
add_executable(ex2 2.cpp)
add_executable(ex3 3.cpp)
add_executable(ex4 4.cpp)
add_executable(ex5 5.cpp)
add_executable(ex6 6.cpp)
add_executable(ex7 7.cpp)
add_executable(ex7_2 7_2.cpp)
add_executable(ex8 8.cpp)
add_executable(ex8_2 8_2.cpp)
add_executable(ex9 9.cpp)