cmake_minimum_required(VERSION 3.17)
project(g2)

set(CMAKE_CXX_STANDARD 14)

add_executable(g01 1.cpp)
add_executable(g02 2.cpp)
add_executable(g03 3.cpp)
add_executable(g04 4.cpp)
add_executable(g05 5.cpp)
add_executable(g06 6.cpp)
add_executable(g07 7.cpp)
add_executable(g08 8.cpp)
add_executable(g09 9.cpp)
add_executable(g10 10.cpp)
add_executable(g11 11.cpp)
add_executable(g12 12.cpp)
add_executable(g13 13.cpp)
add_executable(g14 14.cpp)
add_executable(g15 15.cpp)
add_executable(g16 16.cpp)
add_executable(g17 17.cpp)
